@@ -9,7 +9,6 @@
    N in cm^(-3)
    W in kg m^(-3) s^(-1)
 */
-
 void add_to_W_2r1p ( int specR1, int specR2,
                      int specP1, 
                      double kf, spec_t N, spec_t W);
@@ -27,7 +26,6 @@ void add_to_W_2r3p ( int specR1, int specR2,
    N in cm^(-3)
    W in kg m^(-3) s^(-1)
 */
-
 void add_to_W_3r2p ( int specR1, int specR2, int specR3,
                      int specP1, int specP2,
                      double kf, spec_t N, spec_t W);
@@ -37,8 +35,21 @@ void add_to_W_3r3p ( int specR1, int specR2, int specR3,
                      double kf, spec_t N, spec_t W);
 
 
+/* A in s^(-1) K^(-n)
+   E in cal mole^(-1)
+   T in Kelvin
+   X in mole/cm3
+   W in kg m^(-3) s^(-1)
+*/
 void add_to_W_fw_1r1p(int specR1, int specP1, double A, double n, double E, double T, spec_t X, spec_t W);
 
+/* A in s^(-1) K^(-n)
+   E in cal mole^(-1)
+   T in Kelvin
+   X in mole/cm3
+   dWdT in kg m^(-3) s^(-1) K^(-1)
+   dWdrhok in s^(-1)
+*/
 void add_to_dW_fw_1r1p(int specR1, int specP1, double A, double n, double E, double T, spec_t X, spec_t dWdT, spec2_t dWdrhok);
 
 
@@ -72,7 +83,6 @@ void add_to_dW_2r3p ( int specR1, int specR2, int specP1, int specP2, int specP3
    dWdTv in kg m^(-3) s^(-1) K^(-1)
    dWdTe in kg m^(-3) s^(-1) K^(-1)
 */
-
 void add_to_dW_3r2p ( int specR1, int specR2, int specR3, int specP1, int specP2,  
                       double kf, spec_t N, 
                       double dkfdT, double dkfdTv, double dkfdTe, spec2_t dWdrhok, spec_t dWdT, spec_t dWdTv, spec_t dWdTe);
@@ -81,13 +91,12 @@ void add_to_dW_3r3p ( int specR1, int specR2, int specR3, int specP1, int specP2
                       double kf, spec_t N, 
                       double dkfdT, double dkfdTv, double dkfdTe, spec2_t dWdrhok, spec_t dWdT, spec_t dWdTv, spec_t dWdTe);
 
-/* A in cm^3 (mole s)^(-1) K^(-n) 
+/* A in cm^3 (mole s)^(-1) K^(-n)
    E in cal mole^(-1) 
    T in Kelvin
    X in mole/cm3
    W in kg m^(-3) s^(-1)
 */
-
 void add_to_W_fwbw_2r1p(int specR1, int specR2,
                             int specP1,
                             double A, double n, double E, double T, spec_t X, spec_t W);
@@ -124,7 +133,12 @@ void add_to_W_bw_2r3p(int specR1, int specR2,
                             int specP1, int specP2, int specP3,
                             double A, double n, double E, double T, spec_t X, spec_t W);
 
-
+/* A in cm^6 mole^(-2) s^(-1) K^(-n)
+   E in cal mole^(-1) 
+   T in Kelvin
+   X in mole/cm3
+   W in kg m^(-3) s^(-1)
+*/
 void add_to_W_fwbw_3r2p(int specR1, int specR2, int specR3,
                             int specP1, int specP2,
                             double A, double n, double E, double T, spec_t X, spec_t W);
@@ -137,6 +151,12 @@ void add_to_W_bw_3r2p(int specR1, int specR2, int specR3,
                             int specP1, int specP2,
                             double A, double n, double E, double T, spec_t X, spec_t W);
 
+/* A in s^(-1) K^(-n)
+   E in cal mole^(-1)
+   T in Kelvin
+   X in mole/cm3
+   W in kg m^(-3) s^(-1)
+*/
 void add_to_W_fwbw_1r2p(int specR1, 
                             int specP1, int specP2, 
                             double A, double n, double E, double T, spec_t X, spec_t W);
@@ -157,7 +177,6 @@ void add_to_W_bw_1r2p(int specR1,
    dWdT in kg m^(-3) s^(-1) K^(-1)
    dWdrhok in s^(-1)
 */
-
 void add_to_dW_fwbw_2r1p(int specR1, int specR2,
                              int specP1, 
                              double A, double n, double E, double T, spec_t X, 
@@ -204,6 +223,13 @@ void add_to_dW_bw_2r3p(int specR1, int specR2,
                              double A, double n, double E, double T, spec_t X, 
                              spec_t dWdT, spec2_t dWdrhok);
 
+/* A in cm^6 mole^(-2) s^(-1) K^(-n)
+   E in cal mole^(-1) 
+   T in Kelvin
+   X in mole/cm3
+   dWdT in kg m^(-3) s^(-1) K^(-1)
+   dWdrhok in s^(-1)
+*/
 void add_to_dW_fwbw_3r2p(int specR1, int specR2, int specR3,
                              int specP1, int specP2,
                              double A, double n, double E, double T, spec_t X, 
@@ -219,6 +245,13 @@ void add_to_dW_bw_3r2p(int specR1, int specR2, int specR3,
                              double A, double n, double E, double T, spec_t X, 
                              spec_t dWdT, spec2_t dWdrhok);
 
+/* A in s^(-1) K^(-n)
+   E in cal mole^(-1)
+   T in Kelvin
+   X in mole/cm3
+   dWdT in kg m^(-3) s^(-1) K^(-1)
+   dWdrhok in s^(-1)
+*/
 void add_to_dW_fwbw_1r2p(int specR1, 
                              int specP1, int specP2, 
                              double A, double n, double E, double T, spec_t X, 
@@ -248,7 +281,6 @@ void add_to_dW_bw_1r2p(int specR1,
    dWdT in kg m^(-3) s^(-1) K^(-1)
    dWdrhok in s^(-1)
 */
-
 void add_to_W_fw_2r2p_fit4(int specR1, int specR2,
                            int specP1, int specP2,
                            double A, double n, double E1, double E2, double E3, double E4, double T, spec_t X, spec_t W);
@@ -267,6 +299,33 @@ void add_to_dW_fw_2r3p_fit4(int specR1, int specR2,
                        int specP1, int specP2, int specP3,
                        double A, double n, double E1, double E2, double E3, double E4, double T, spec_t X, 
                        spec_t dWdT, spec2_t dWdrhok);
+
+
+void add_to_W_fw_3r2p_Lindemann(int specR1, int specR2, int specR3,
+                                int specP1, int specP2,
+                                double A0, double n0, double E0, 
+                                double A,  double n , double E, 								
+							                	double T, double M, spec_t X, spec_t W);
+                                
+void add_to_W_fw_2r3p_Lindemann(int specR1, int specR2,
+                                int specP1, int specP2, int specP3,
+                                double A0, double n0, double E0,
+                                double A, double n, double E,								
+                                double T, double M, spec_t X, spec_t W);
+                                
+void add_to_dW_fw_3r2p_Lindemann(int specR1, int specR2, int specR3,
+                                 int specP1, int specP2,
+                                 double A0, double n0, double E0,
+                                 double A, double n, double E, 
+                                 double T, double M, spec_t X, 
+                                 spec_t dWdT, spec2_t dWdrhok);
+
+void add_to_dW_fw_2r3p_Lindemann(int specR1, int specR2,
+                                 int specP1, int specP2, int specP3,
+                                 double A0, double n0, double E0,
+                                 double A, double n, double E, 								 
+                                 double T, double M, spec_t X, 
+                                 spec_t dWdT, spec2_t dWdrhok);
 
 
 /* find the forward reaction rate cofficient kf = A * (calA)^(1-numreactant) * T^n * exp(-E/(R*T))
